--- a/examples/table/tsconfig.json
+++ b/examples/table/tsconfig.json
@@ -1,16 +1,19 @@
 {
     "compilerOptions": {
-        "sourceMap": true,
-        "noImplicitAny": true,
-        "strictNullChecks": true,
-        "module": "commonjs",
         "target": "es5",
-        "jsx": "react",
-        "lib": ["dom", "es2015", "es2016", "es2017", "esnext.asynciterable"],
-        "baseUrl": "./",
-        "paths": {
-            "app/*": ["src/*"]
-        }
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "preserve"
     },
-    "compileOnSave": false
+    "include": ["src"]
 }
