--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@formatjs/cli": "^2.13.12",
         "@material-ui/core": "^4.10.1",
         "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/styles": "^4.10.0",
         "@types/classnames": "^2.2.9",
         "@types/debounce": "^1.2.0",
