--- a/packages/comet-admin-stories/package.json
+++ b/packages/comet-admin-stories/package.json
@@ -8,6 +8,7 @@
         "@apollo/client": "^3.2.5",
         "@material-ui/core": "^4.1.3",
         "@material-ui/icons": "^4.2.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/styles": "^4.1.2",
         "@vivid-planet/comet-admin": "*",
         "@vivid-planet/comet-admin-color-picker": "*",
