--- a/packages/comet-admin/package.json
+++ b/packages/comet-admin/package.json
@@ -19,6 +19,7 @@
         "@apollo/client": "^3.2.5",
         "@material-ui/core": "^4.1.3",
         "@material-ui/icons": "^4.2.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/styles": "^4.1.3",
         "exceljs": "^3.4.0",
         "file-saver": "^2.0.2",
