--- a/packages/admin-date-time/package.json
+++ b/packages/admin-date-time/package.json
@@ -8,6 +8,7 @@
     ],
     "dependencies": {
         "moment": "^2.24.0",
+        "date-fns": "^2.21.3",
         "react-dates": "^21.8.0"
     },
     "devDependencies": {
