--- a/packages/admin-color-picker/package.json
+++ b/packages/admin-color-picker/package.json
@@ -29,7 +29,7 @@
         "build": "tsc --project ./tsconfig.json",
         "prestart": "rimraf lib",
         "start": "tsc --project ./tsconfig.json --watch --preserveWatchOutput",
-        "prepare": "npm run build",
+        "prepare": "yarn build",
         "lint:tsc": "tsc --noEmit"
     },
     "publishConfig": {
