--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "start": "pm2 start ecosystem.config.js",
         "storybook": "yarn workspace @comet/admin-stories storybook",
         "lint": "yarn lint:eslint && yarn lint:tsc",
-        "lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.json,.md packages/**/src/",
+        "lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.json,.md packages/*/src",
         "prelint:tsc": "yarn build",
         "lint:tsc": "lerna run lint:tsc --stream",
         "prebuild:storybook": "yarn build",
